--- a/src/ShoeShop/Areas/Admin/Views/Order/Edit.cshtml
+++ b/src/ShoeShop/Areas/Admin/Views/Order/Edit.cshtml
@@ -116,4 +116,58 @@
         document.getElementById("orderIdDetail").value = @Model.Id;
         new bootstrap.Modal(document.getElementById("createOrder")).show();
     });
+
+        window.openPopupEditOrder = function (id, productid, quantity, total) {
+        $.ajax({
+            url: '/Admin/Order/EditModal',
+            data: { Id: id, ProductId: productid, Quantity: quantity, Total: total },
+            dataType: 'json',
+            type: "GET",
+            success: function (data) {
+                $("#orderid").val(data.id);
+                $("#quantityOrder").val(data.quantity);
+                var $select = $("#productIdOrder");
+                $select.empty(); // clear option cũ
+
+                data.products.forEach(item => {
+                    // xác định selected ngay khi append
+                    var selected = item.value === data.productid ? "selected" : "";
+                    $select.append(`<option value="${item.value}" ${selected}>${item.text}</option>`);
+                });
+
+                // set value + trigger change cho select2
+                $select.val(data.productid).trigger('change');
+                $("#priceOrder").val(data.total);
+
+                var modal = new bootstrap.Modal(document.getElementById("updateOrder"));
+                modal.show();
+            }
+        });
+    }
+
+    window.onDeleteOrderDetail = function (id) {
+        $.ajax({
+            url: '/Admin/Order/DeleteModal', //additional parameters
+            data: { Id: id },
+            dataType: 'json',
+            type: "POST",
+            success: function (data) {
+                window.location.reload()
+            }
+        });
+    }
+
+    window.openCreateOrderDetail = function (id) {
+        $.ajax({
+            url: '/Admin/Order/CreateModal', //additional parameters
+            data: { Id: id },
+            dataType: 'json',
+            type: "POST",
+            success: function (data) {
+                $("#orderIdDetail").val(data.Id);
+                var modal = new bootstrap.Modal(document.getElementById("createOrder"));
+                modal.show();
+            }
+        });
+    }
 </script>
